@@ -13,6 +13,7 @@ import (
 	"github.com/csmith/goplum/plugins/pushover"
 	"github.com/csmith/goplum/plugins/slack"
 	"github.com/csmith/goplum/plugins/smtp"
+	"github.com/csmith/goplum/plugins/snmp"
 	"github.com/csmith/goplum/plugins/twilio"
 	"github.com/kouhin/envflag"
 )
@@ -48,6 +49,9 @@ var plugins = map[string]goplum.PluginLoader{
 	},
 	"smtp": func() (goplum.Plugin, error) {
 		return smtp.Plugin{}, nil
+	},
+	"snmp": func() (goplum.Plugin, error) {
+		return snmp.Plugin{}, nil
 	},
 	"twilio": func() (goplum.Plugin, error) {
 		return twilio.Plugin{}, nil
