@@ -130,6 +130,28 @@ alert smtp.send "smtp" {
 }
 
 # ---------------------------------------------------------------------------------------------------------------------
+# SNMP plugin
+# ---------------------------------------------------------------------------------------------------------------------
+
+check snmp.int "snmp int" {
+  agent = "192.168.1.1"
+  port = 161                                # optional (default = 161)
+  community = "public"                      # optional (default = public)
+  oid = [".1.3.6.1.4.1.2021.4.11.0", ".1.3.6.1.4.1.2021.4.4"]
+  at_least = 10000                          # optional (one of at_least and at_most should be set)
+  at_most = 90000                           # optional (one of at_least and at_most should be set)
+}
+
+check snmp.string "snmp string" {
+  agent = "192.168.1.1"
+  port = 161                                # optional (default = 161)
+  community = "public"                      # optional (default = public)
+  oid = ".1.3.6.1.4.1.2021.9.1.2"
+  content = "HDD"
+  content_expected = true                   # optional (default = true)
+}
+
+# ---------------------------------------------------------------------------------------------------------------------
 # Twilio plugin
 # ---------------------------------------------------------------------------------------------------------------------
 
